2022-05-18  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-audiovideo.el (ee-time-to-youtube-time): fixed a bug.

2022-05-15  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (find-2022eevwconfigvideo): new function.
	(ee-1stclassvideos-info): added an entry for "2022eevwconfig".

2022-05-14  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-elinks.el (find-eface-links): added some items.

2022-05-12  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (find-eev2019video, find-eev2020video)
	(find-eev2021video, find-eev2021bvideo, find-eevnavvideo)
	(find-eevtemplvideo, find-eevfherelvideo, find-eevtestblsvideo)
	(find-eevvlinksvideo, find-oficina20210video)
	(find-oficina2021avideo, find-oficina2021bvideo)
	(find-2021ssrvideo, find-2021workshop1video)
	(find-2021workshop2video, find-2021workshop3video)
	(find-2021workshop4video, find-2021workshop5video)
	(find-2021workshop6video, find-2021orgfornonusersvideo)
	(find-2021ffllvideo, find-2022eevmake0video)
	(find-2022findeevanggvideo, find-2022findelispintrovideo)
	(find-2022pict2eluavideo, find-2022eevwconfigpt1video)
	(find-2022eevwconfigpt2video): use `find-1stclassvideo-video'.

	* eev-tlinks.el (ee-psne-1stclassvideo-play)
	(find-1stclassvideo-video): new functions.
	(ee-find-1stclassvideo-defun): new function.
	(ee-find-1stclassvideo-links): use `ee-find-1stclassvideo-defun'.

	* eev-code.el: added `(code-c-d "eevvideos" ...).

2022-05-11  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-video-links-intro): rewrote the section "5.1.
	Subtitles".

	* eev-tlinks.el (find-psne-eevvideo-links)
	(ee-psne-eevvideo-core, find-psne-1stclassvideo-links): new
	functions.
	(ee-1stclassvideos-dlsubs): use `find-psne-1stclassvideo-links'
	and `find-psne-eevvideo-links' instead of
	`find-wgeteevsubtitles-links'.
	(find-wgeteevsubtitles-links): marked as obsolete.

	* eev-videolinks.el (ee-1stclassvideos-localmp4)
	(ee-1stclassvideos-mp4found): new functions.
